--- a/index.css
+++ b/index.css
@@ -85,7 +85,8 @@ a {
 }
 .style-bg{
   min-height: 100vh;
-  background-image: url("wall.jpg");
+  background-image: url("img/wall.jpg");
   background-repeat: repeat;
   background-size: 50vh, 50vh;
+
 }
