--- a/index.css
+++ b/index.css
@@ -1,92 +1,64 @@
-* {
-  margin: 0;
-  padding: 0;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My site :-D</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body class="style-bg-1">
+  <header>
+      <nav aria-label="main navigation">
+          <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="aboutme.html">About me</a></li>
+              <li><a href="journal.html">Journal</a></li>
+          </ul>
+      </nav>
+  </header>
+  
+  <div class="container-1">
+    <div class="left-image">
+      <img src="img/face.webp" class="imgsize-1" alt="Face">
+    </div>
+    <div class="center-text">
+      <section>
+        <article>
+          <h1 class="fontsize-2 style-2">Welcome</h1>
+          <p class="fontsize-1 style-1 style-border-1 text-left">
+            Hi! I'm Liberosis and this is my website.
+            There's not as much content here as I'd like, but I'm still working on it.
+          </p>
+        </article>
+      </section>
+    </div>
+    <div class="right-image">
+      <img src="img/face2.webp" class="imgsize-1" alt="Face">
+    </div>
+  </div>
+  
+  <hr class="line-1">
+  <hr class="line-2">
 
-header {
-  margin: 0;
-  padding: 3vh;
-  border: none;
-  border-bottom: 0.4vh solid red;
-  outline: 0.4vh solid red;
-  outline-offset: 1vh;
-  width: 100%;
-  line-height: 1;
-}
-header ul {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 100%;
-  align-items: center;
-}
-header li {
-  margin: 0 1vw;
-  padding-right: 10vh;
-  display: inline-block;
-}
-header a {
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  color: red;
-  font-size: 4vh;
-  display: block;
-  padding: 0;
-}
+  <div class="images-container">
+    <div class="image-column left-column">
+      <img src="img/face3.png" class="column-img" alt="Face">
+      <img src="img/column.png" class="column-img" alt="Column">
+      <img src="img/face4.png" class="column-img" alt="Face">
+    </div>
+    <div>
+      <p class="fontsize-1 style-1">Here you can find info about my future projects.</p>
+      <a href="myprojects.html" class="fontsize-1 style-1">Clik</a>
+    </div>
+    <div class="image-column right-column">
+      <img src="img/face3.png" class="column-img flipped" alt="Face mirrored">
+      <img src="img/column.png" class="column-img flipped" alt="Column mirrored">
+      <img src="img/face4.png" class="column-img flipped" alt="Face mirrored">
+    </div>
+  </div>
 
-a:hover {
-  font-weight: bold;
-}
-a {
-   text-decoration: none;
-}
-.style-1 {
-  color: #c7ae8f;
-  font-size: 3vh;
-  min-height: 2vh;
-  padding-top: 2vh;
-}
-.style-2 {
-  display: block;
-  width: 40%;
-  margin-left: auto;
-  margin-right: auto;
-}
-.style-3 {
-  text-align: center;
-  font-size: 4vh;
-  color: red;
-  margin: 2vh;
-}
-.text-with-border {
-    border: 10vh solid transparent; 
-    border-image: url('frame.png') 60 stretch;
-    padding: 5vh;
-    background-color: transparent;
-}
-.style-img-1 {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40%;
-  border-radius: 0.5vw;
-  margin-top: 5vh;
-  padding: 0.5vh;
-  border: 0.4vh solid red;
-}
-.style-img-2 {
-  float: left; 
-  width: 20%;
-  margin-right: 0;
-  margin-top: 1vh;
-  padding: 0.5vh;
-}
-.style-bg{
-  min-height: 100vh;
-  background-image: url("img/wall.jpg");
-  background-repeat: repeat;
-  background-size: 50vh, 50vh;
-
-}
+  <footer>
+    <p class="fontsize-1 style-1">Thanks to these cool guys: Gan (my friend) and justadevvv on <a href="https://bsky.app/profile/justadevvv.bsky.social" class="style-1">Bluesky</a></p>
+  </footer>
+</body>
+</html>
